# seda-backtester

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
examples/: multi_asset_portfolio.py  optimization_demo.py  simple_sma_backtest.py
sample_data/: AAPL_1h.csv  BTCUSDT_1h.csv  BTCUSDT_4h.csv  ETHUSDT_1h.csv  ETHUSDT_4h.csv  EURUSD_1h.csv
src/backtester/: __init__.py
src/backtester/core/: backtester.py  engine.py  execution.py  liquidation_tracker.py  order.py  results.py  simulation.py  trade.py
src/backtester/data/: base_provider.py  csv_provider.py
src/backtester/optimization/: optimizer.py
src/backtester/reporting/: plotter.py  reporter.py
src/backtester/sizers/: sizers.py
src/backtester/strategies/: base.py  bollinger_breakout.py  rsi_mean_reversion.py  sma_crossover.py
tests/: conftest.py  test_backtester.py  test_execution.py  test_liquidation.py  test_optimizer.py  test_plotter.py  test_reporter.py  test_results_metrics.py  test_sizers.py  test_trade.py  test_trade_property.py
